--- a/Rules/Rules.csproj
+++ b/Rules/Rules.csproj
@@ -12,9 +12,8 @@
     <AssemblyName>Rules</AssemblyName>
     <DefaultLanguage>de-DE</DefaultLanguage>
     <FileAlignment>512</FileAlignment>
-    <ProjectTypeGuids>{786C830F-07A1-408B-BD7F-6EE04809D6DB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <TargetFrameworkProfile>Profile259</TargetFrameworkProfile>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -49,14 +48,30 @@
     <Compile Include="Character\CharacterValue.cs" />
     <Compile Include="Character\CharacterValueMap.cs" />
     <Compile Include="Die.cs" />
+    <Compile Include="JobFactory.cs" />
+    <Compile Include="Jobs\JobItem.cs" />
+    <Compile Include="PdfAdapter.cs" />
     <Compile Include="Pool.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RuleCore.cs" />
+    <Compile Include="SkillFactory.cs" />
+    <Compile Include="Skills\SkillCollection.cs" />
+    <Compile Include="Skills\SkillItem.cs" />
     <Compile Include="Values\AbstractValue.cs" />
     <Compile Include="Values\CalcValue.cs" />
     <Compile Include="Values\NumericalValue.cs" />
+    <Compile Include="Values\SkillValue.cs" />
   </ItemGroup>
-  <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
+  <ItemGroup>
+    <Reference Include="System" />
+    <Reference Include="System.Xml">
+      <HintPath>C:\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.5.2\System.Xml.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="project.json" />
+  </ItemGroup>
+  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
